# indexer-evm

./: .dockerignore  .gitignore  Cargo.toml  DOCUMENTATION.md  Dockerfile  Makefile  README.md  config.example.yaml
.github/workflows/: ci.yml
docs/: README.md  abi-decoding.md  accounts.md  aggregations.md  architecture.md  block-sources.md  configuration.md  factory-contracts.md  fan-out.md  filters.md  multi-chain.md  observability.md  reorg-handling.md  schema-model.md  sync-engine.md  traces.md  views.md
src/: main.rs  metrics.rs  types.rs
src/abi/: decoder.rs  function_decoder.rs  mod.rs
src/api/: health.rs  mod.rs  sync.rs
src/config/: mod.rs
src/db/: accounts.rs  decoded.rs  events.rs  factory.rs  migrations.rs  mod.rs  traces.rs  views.rs  workers.rs
src/export/: csv.rs  mod.rs
src/factory/: backfill.rs  mod.rs  watcher.rs
src/filter/: mod.rs
src/queue/: mod.rs  publisher.rs  webhook.rs
src/reorg/: detector.rs  finality.rs  mod.rs
src/sources/: concurrency.rs  erpc.rs  fallback.rs  hypersync.rs  mod.rs  rpc.rs  traces.rs  transactions.rs
src/sync/: account_syncer.rs  chain_syncer.rs  mod.rs  progress.rs  retry.rs  trace_syncer.rs  view_indexer.rs  worker.rs
